# Cuentame-Mas_API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: README.md  config.py  main.py
app/app/core/: db.py
app/app/models/: chat.py  reminder.py
app/auth/: JWTBearer.py  JWTManager.py
app/core/: config.py  db.py
app/database/: db.py
app/graphql/resolvers/: chats_resolver.py  guest_resolver.py  ia_resolver.py  messages_resolver.py  reminders_resolver.py  users_resolver.py
app/graphql/schemas/: input_schema.py  mutation_schema.py  query_schema.py
app/graphql/types/: paginationWindow.py
app/jobs/: reminder_job.py  scheduler.py
app/models/: chat.py  guest_session.py  ia_model.py  message.py  reminder.py  user.py
app/services/: email_service.py
mlruns/.trash/166770993333367624/: meta.yaml
mlruns/.trash/538750769717286652/: meta.yaml
mlruns/.trash/663874797746491676/: meta.yaml
mlruns/0/: meta.yaml
mlruns/178043232099762040/: meta.yaml
mlruns/715046240608851114/: meta.yaml
mlruns/715046240608851114/018f054cb590496191d135b471e897f1/: meta.yaml
mlruns/715046240608851114/929052852f894c1eac13f948ff4907a3/: meta.yaml
mlruns/715046240608851114/ea8628bed7d84ff691b5baf3cf7ace2a/: meta.yaml
mlruns/715046240608851114/f64f53a6825e4863970ae9171731f2b9/: meta.yaml
mlruns/880645134898555871/: meta.yaml
mlruns/880645134898555871/013b1d51e89b43e0a6096521dcd458eb/: meta.yaml
mlruns/880645134898555871/0917487e21404a868e4a0c190a15e338/: meta.yaml
mlruns/880645134898555871/0ea33d728b444c8ba330262cef36d171/: meta.yaml
mlruns/880645134898555871/10b39e3b77da45c3a8a163737ccd88cd/: meta.yaml
mlruns/880645134898555871/15e79c28fbb446fd9ed6f190bd990fea/: meta.yaml
mlruns/880645134898555871/16366a516e1b44579bcb6c7f9e999525/: meta.yaml
mlruns/880645134898555871/191a430fd4334d8597657f2cd87cce38/: meta.yaml
mlruns/880645134898555871/23590d1cb46f449b8b52843161d3d871/: meta.yaml
mlruns/880645134898555871/2f28fb7980e140f090e34819c579da72/: meta.yaml
mlruns/880645134898555871/2f4734b2c4624098a0e26641f16dc393/: meta.yaml
mlruns/971991357729505818/: meta.yaml
notebooks/: Colab Axolotl Example.ipynb  MLX_LoRA_FT.ipynb  lora_finetuning_test.ipynb  metatest.ipynb
notebooks/dataset/: All_training.jsonl  All_validation.jsonl
notebooks/dataset_faq_adeudos/: dataset.jsonl
(+421 files in other folders)
