[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-jose>=3.3.0",
    "pymongo>=4.8.0",
    "graphql-core>=3.2.3",
    "pytest>=8.3.2",
    "python-dotenv>=1.0.1",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.4.0",
    "starlette>=0.38.2",
    "email-validator>=2.2.0",
    "transformers>=4.44.2",
    "pip>=24.2",
    "torch",
    "sentencepiece>=0.2.0",
    "strawberry-graphql>=0.246.1",
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.7",
    "peft>=0.13.2",
    "datasets>=3.1.0",
    "accelerate>=1.1.1",
    "apscheduler>=3.11.0",
    "fastapi-mail>=1.4.2",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "rouge-score>=0.1.2",
    "mlflow>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
